# pdf-service

./: pyproject.toml
.github/workflows/: lint_code_workflow.yml  pre-production.yml  production_workflow.yml
app/: main.py
app/api/: api_pdf.py
app/api/v1/: api_pdf.py
app/services/: file_service.py
